# Mark-8-Swift

./: hey.txt  main.py  pyproject.toml
dumper/: border-entrance.txt  bot-commands.txt  congressional-announcements.txt  counting.txt  defcon-level.txt  department-advertisement.txt  executive-appointments.txt  lobby-chat.txt  main-communications.txt  official-links.txt  presidential-announcements.txt  reaction-roles.txt  twitter.txt
