[tool.poetry]
name = "swift-working-edition"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
imagehash = "^4.2.0"
pydictionary = "^2.0.1"
pytesseract = "^0.3.7"
selenium = "^3.141.0"
discord = "^1.0.1"
goslate = "^1.5.1"
googletrans = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
